tests/expectations/compiler/option/unsupported_optional_fail.out
Error [ETYC0372159]: The type `(u8, u8)` cannot be wrapped in an optional.
    --> compiler-test:4:9
     |
   4 |         let a: (u8, u8)? = (1u8, 2u8); // ERROR: Tuples cannot be optional just yet
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected (u8, u8)? but type `(u8, u8)` was found.
    --> compiler-test:4:28
     |
   4 |         let a: (u8, u8)? = (1u8, 2u8); // ERROR: Tuples cannot be optional just yet
     |                            ^^^^^^^^^^
Error [ETYC0372159]: The type `signature` cannot be wrapped in an optional.
    --> compiler-test:7:25
     |
   7 |     transition sig_type(s: signature?) {
     |                         ^^^^^^^^^^^^^
Error [ETYC0372159]: The type `Future<Fn()>` cannot be wrapped in an optional.
    --> compiler-test:12:9
     |
  12 |         let fut: Future? = finalize(); // ERROR: Future? is not allowed
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372003]: Expected type `Future<Fn()>?` but type `Future<Fn()>` was found
    --> compiler-test:12:28
     |
  12 |         let fut: Future? = finalize(); // ERROR: Future? is not allowed
     |                            ^^^^^^^^^^
